Responsive fix for chart.js overlap issue
Removed any height restrictions so that charts.js library can adjust graphs without forcing overlap
on larger screens.

--- a/src/style.css
+++ b/src/style.css
@@ -286,18 +286,15 @@ table {
 
 /* Profile/Charts.js Emotion Comparision Bar Graphs*/
 .barGraphsDiv{
-    /*height: 300px;*/
     display: block;
 }
 .barGraphBefore {
     display: inline-block;
     width: 50%;
-    height: 400px;
 
 }
 .barGraphAfter {
     display: inline-block;
     float: right;
     width: 50%;
-    height: 400px;
 }
